# FoS_Project

./: Assignment.txt  CMakeLists.txt  README.md
DB/: db.cpp  db.hpp  dss.db
DSS/: CAMain.cpp  CMakeCache.txt  ClientMain.cpp  MainActivity.cpp  Makefile  ServerMain.cpp  client_app  cmake_install.cmake  db.db  fos
DSS/CA/: CA.cpp  CA.h  caServer.cpp  caServer.h
DSS/Certifications/: ca.crt  ca.key  ca.srl  ca_server.crt  ca_server.csr  ca_server.key  dss.crt  dss.csr  dss.key  server.csr  server.key
DSS/Client/: client.cpp  client.h  client.hpp
DSS/DB/: Queries.sql  db.cpp  db.h  dbCA.cpp  dbCA.db  dbCA.h  dss.db  offline_users.json
DSS/Models/: models.h
DSS/Protocol/: secureChannel.cpp  secureChannel.h  secureChannelCA.cpp  secureChannelCA.h  secureChannelClient.cpp  secureChannelClient.h  secureChannelServer.cpp  secureChannelServer.h
DSS/Server/: crypto.cpp  crypto.h  crypto.hpp  dssServer.cpp  dssServer.h  dssServer.hpp
DSS/UsersPK/: bruna_dss_pubkey.crt
